use Java 17 language features